--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ color: blue;
 <title>First Letter</title>
 </head>
 <body>
-<p>This paragraph demonstrates how the first letter becomes large and styled differently
+<p>This paragraph is demonstrates how the first letter becomes large and styled differently
 using the ::first-letter pseudo-element.</p>
 </body>
+
 </html>
